# subscription-analyzer

./: .coveragerc  Makefile  main.py  pyproject.toml  ruff.toml
migrations/: env.py
migrations/versions/: 2024_10_09_0040-f9f7705a99a3_.py
src/application/: mediator.py
src/application/commands/category/: __init__.py  create_category_command.py  delete_category_command.py  update_category_command.py
src/application/commands/subscription/: __init__.py  create_subscription_command.py  delete_subscription_command.py  update_subscription_command.py
src/application/commands/user/: __init__.py  auth_user_command.py  register_command.py
src/application/exceptions/: base.py  category.py  common.py  mediator.py  subscription.py  user.py
src/application/queries/: base.py
src/application/queries/category/: __init__.py  get_category_by_id_query.py  get_user_categories_query.py
src/core/: container.py  settings.py
src/domain/: helpers.py
src/domain/entity/: base.py  category.py  subscription.py  user.py
src/domain/exceptions/: base.py  category.py  subscription.py  user.py
src/domain/repositories/: category.py  subscription.py  user.py
src/domain/values/: base.py  category.py  subscription.py  user.py
src/infra/exceptions/: base.py  security.py
src/infra/repositories/: factories.py  uow.py
src/infra/security/: base.py  password.py  token.py
src/presentation/: main.py
src/presentation/api/v1/: user.py  (+1 more)
src/presentation/dependencies/: __init__.py  auth.py  common.py
src/presentation/schemas/: category.py  user.py
src/services/: mediator.py
src/services/commands/: base.py
src/services/exceptions/: base.py  category.py  common.py  mediator.py  user.py
tests/: conftest.py
tests/functional/: conftest.py  data_fixtures.py  settings.py
tests/functional/presentation/: conftest.py  test_category.py  test_user.py
tests/unit/domain/: test_category.py  test_subscription.py  test_user.py
(+38 files in other folders)
