[tool.poetry]
name = "subscribtion-analyzer"
version = "0.1.0"
description = ""
authors = ["sdfy-fly <rozhov25@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^75.1.0"
pydantic-settings = "^2.5.2"
sqlalchemy = "^2.0.35"
alembic = "^1.13.3"
asyncpg = "^0.29.0"
python-dotenv = "^1.0.1"
punq = "^0.7.0"
psycopg2 = "^2.9.9"
bcrypt = "^4.2.0"
pyjwt = "^2.9.0"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
httpx = "^0.27.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"

[tool.poetry.group.tests.dependencies]
faker = "^30.3.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
freezegun = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
